tag before making auth/options subsytem changes