@@ -1,12 +1,11 @@
 /*
  * ====================================================================
- * Copyright (c) 2004 TMate Software Ltd.  All rights reserved.
- *
- * This software is licensed as described in the file COPYING, which
- * you should have received as part of this distribution.  The terms
- * are also available at http://tmate.org/svn/license.html.
- * If newer versions of this license are posted there, you may use a
- * newer version instead, at your option.
+ * Copyright (c) 2004 TMate Software Ltd. All rights reserved.
+ * 
+ * This software is licensed as described in the file COPYING, which you should
+ * have received as part of this distribution. The terms are also available at
+ * http://tmate.org/svn/license.html. If newer versions of this license are
+ * posted there, you may use a newer version instead, at your option.
  * ====================================================================
  */
 
@@ -18,12 +17,10 @@ import java.util.Collection;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.ArrayList;
-import java.util.List;
 
 import org.tmatesoft.svn.core.SVNProperty;
-import org.tmatesoft.svn.core.diff.SVNDiffWindow;
-import org.tmatesoft.svn.core.diff.SVNDiffWindowBuilder;
+import org.tmatesoft.svn.core.internal.diff.SVNDiffWindow;
+import org.tmatesoft.svn.core.internal.diff.SVNDiffWindowBuilder;
 import org.tmatesoft.svn.core.io.ISVNCredentials;
 import org.tmatesoft.svn.core.io.ISVNDirEntryHandler;
 import org.tmatesoft.svn.core.io.ISVNEditor;
@@ -47,13 +44,20 @@ import org.tmatesoft.svn.util.DebugLog;
 import org.tmatesoft.svn.util.PathUtil;
 
 /**
- * @author Alexander Kitaev
+ * @version 1.0
+ * @author TMate Software Ltd.
  */
 public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
 
     private SVNConnection myConnection;
+
     private ISVNCredentials myCredentials;
-	private String myFullRoot;
+
+    private String myFullRoot;
+
+    private String myRealm;
+
+    private String myExternalUserName;
 
     protected SVNRepositoryImpl(SVNRepositoryLocation location) {
         super(location);
@@ -96,12 +100,14 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         return SVNReader.getLong(buffer, 0);
     }
 
-    public Map getRevisionProperties(long revision, Map properties) throws SVNException {
+    public Map getRevisionProperties(long revision, Map properties)
+            throws SVNException {
         assertValidRevision(revision);
         if (properties == null) {
             properties = new HashMap();
         }
-        Object[] buffer = new Object[] { "rev-proplist", getRevisionObject(revision) };
+        Object[] buffer = new Object[] { "rev-proplist",
+                getRevisionObject(revision) };
         try {
             openConnection();
             write("(w(n))", buffer);
@@ -114,9 +120,11 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         return properties;
     }
 
-    public String getRevisionPropertyValue(long revision, String propertyName) throws SVNException {
+    public String getRevisionPropertyValue(long revision, String propertyName)
+            throws SVNException {
         assertValidRevision(revision);
-        Object[] buffer = new Object[] { "rev-prop", getRevisionObject(revision), propertyName };
+        Object[] buffer = new Object[] { "rev-prop",
+                getRevisionObject(revision), propertyName };
         try {
             openConnection();
             write("(w(ns))", buffer);
@@ -128,11 +136,13 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         return (String) buffer[0];
     }
 
-    public SVNNodeKind checkPath(String path, long revision) throws SVNException {
+    public SVNNodeKind checkPath(String path, long revision)
+            throws SVNException {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[] { "check-path", path, getRevisionObject(revision) };
+            Object[] buffer = new Object[] { "check-path", path,
+                    getRevisionObject(revision) };
             write("(w(s(n)))", buffer);
             authenticate();
             read("[(W)]", buffer);
@@ -143,7 +153,8 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public int getLocations(String path, long pegRevision, long[] revisions, ISVNLocationEntryHandler handler) throws SVNException {
+    public int getLocations(String path, long pegRevision, long[] revisions,
+            ISVNLocationEntryHandler handler) throws SVNException {
         assertValidRevision(pegRevision);
         for (int i = 0; i < revisions.length; i++) {
             assertValidRevision(revisions[i]);
@@ -152,24 +163,27 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[] { "get-locations", path, getRevisionObject(pegRevision), revisions };
+            Object[] buffer = new Object[] { "get-locations", path,
+                    getRevisionObject(pegRevision), revisions };
             write("(w(sn(*n)))", buffer);
             authenticate();
-            try {
-                while (true) {
+            while (true) {
+                try {
                     read("(NS)", buffer);
-                    count++;
-                    if (handler != null) {
-                        long revision = SVNReader.getLong(buffer, 0);
-                        String location = SVNReader.getString(buffer, 1);
-                        if (location != null) {
-                            handler.handleLocationEntry(new SVNLocationEntry(revision, location));
-                        }
+                } catch (SVNException e) {
+                    break;
+                }
+                count++;
+                if (handler != null) {
+                    long revision = SVNReader.getLong(buffer, 0);
+                    String location = SVNReader.getString(buffer, 1);
+                    if (location != null) {
+                        handler.handleLocationEntry(new SVNLocationEntry(
+                                revision, location));
                     }
                 }
-            } catch (SVNException e) {
-                read("x", buffer);
             }
+            read("x", buffer);
             read("[()]", buffer);
         } finally {
             closeConnection();
@@ -177,11 +191,15 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         return count;
     }
 
-    public long getFile(String path, long revision, Map properties, OutputStream contents) throws SVNException {
+    public long getFile(String path, long revision, Map properties,
+            OutputStream contents) throws SVNException {
         Long rev = revision > 0 ? new Long(revision) : null;
         try {
             openConnection();
-            Object[] buffer = new Object[] { "get-file", getRepositoryPath(path), rev, Boolean.valueOf(properties != null), Boolean.valueOf(contents != null) };
+            Object[] buffer = new Object[] { "get-file",
+                    getRepositoryPath(path), rev,
+                    Boolean.valueOf(properties != null),
+                    Boolean.valueOf(contents != null) };
             write("(w(s(n)ww))", buffer);
             authenticate();
             buffer[2] = properties;
@@ -201,51 +219,60 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public long getDir(String path, long revision, Map properties, ISVNDirEntryHandler handler) throws SVNException {
+    public long getDir(String path, long revision, Map properties,
+            ISVNDirEntryHandler handler) throws SVNException {
         Long rev = getRevisionObject(revision);
         // convert path to path relative to repos root.
         try {
-            long start = System.currentTimeMillis();
             openConnection();
-            DebugLog.log("openConnection(): " + (System.currentTimeMillis() - start));
-            start = System.currentTimeMillis();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[] { "get-dir", path, rev, Boolean.valueOf(properties != null), Boolean.valueOf(handler != null) };
+            Object[] buffer = new Object[] { "get-dir", path, rev,
+                    Boolean.valueOf(properties != null),
+                    Boolean.valueOf(handler != null) };
             write("(w(s(n)ww))", buffer);
             authenticate();
 
             buffer[1] = properties;
             buffer = read("[(N(*P)", buffer);
-            revision = buffer[0] != null ? SVNReader.getLong(buffer, 0) : revision;
+            revision = buffer[0] != null ? SVNReader.getLong(buffer, 0)
+                    : revision;
             if (handler != null) {
                 buffer[0] = handler;
                 read("(*D)))", buffer);
             }
-            DebugLog.log("getDir() finished: " + (System.currentTimeMillis() - start));
         } finally {
-            long start = System.currentTimeMillis();
             closeConnection();
-            DebugLog.log("closeConnection(): " + (System.currentTimeMillis() - start));
         }
         return revision;
     }
 
-    public int getFileRevisions(String path, long sRevision, long eRevision, ISVNFileRevisionHandler handler) throws SVNException {
+    public int getFileRevisions(String path, long sRevision, long eRevision,
+            ISVNFileRevisionHandler handler) throws SVNException {
         Long srev = getRevisionObject(sRevision);
         Long erev = getRevisionObject(eRevision);
         int count = 0;
         try {
             openConnection();
-            Object[] buffer = new Object[] { "get-file-revs", getRepositoryPath(path), srev, erev };
+            Object[] buffer = new Object[] { "get-file-revs",
+                    getRepositoryPath(path), srev, erev };
             write("(w(s(n)(n)))", buffer);
             authenticate();
+            buffer = new Object[5];
             while (true) {
                 SVNFileRevision fileRevision = null;
+                boolean skipDelta = false;
                 try {
-                    read("(SN(*P)(*Z))", buffer);
+                    buffer = read("(SN(*P)(*Z)?S", buffer);
+                    if (buffer[4] != null && ((String) buffer[4]).length() == 0) {
+                        buffer[4] = null;
+                        skipDelta = true;
+                    } else {
+                        read(")", null);
+                    }
                     count++;
                 } catch (SVNException e) {
                     read("x", buffer);
+                    read("[()]", buffer);
                     return count;
                 }
                 String name = null;
@@ -255,16 +282,20 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                     Map properties = SVNReader.getMap(buffer, 2);
                     Map propertiesDelta = SVNReader.getMap(buffer, 3);
                     if (name != null) {
-                        fileRevision = new SVNFileRevision(name, revision, properties, propertiesDelta);
+                        fileRevision = new SVNFileRevision(name, revision,
+                                properties, propertiesDelta);
                     }
                     buffer[2] = null;
                     buffer[3] = null;
                 }
                 if (handler != null && fileRevision != null) {
                     handler.handleFileRevision(fileRevision);
-                    fileRevision = null;
                 }
-                SVNDiffWindowBuilder builder = SVNDiffWindowBuilder.newInstance();
+                if (skipDelta) {
+                    continue;
+                }
+                SVNDiffWindowBuilder builder = SVNDiffWindowBuilder
+                        .newInstance();
                 while (true) {
                     byte[] line = (byte[]) read("?W?B", buffer)[1];
                     if (line == null) {
@@ -279,10 +310,12 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                     SVNDiffWindow window = builder.getDiffWindow();
                     if (window != null) {
                         builder.reset(1);
-                        OutputStream os = handler.handleDiffWindow(name == null ? path : name, window);
+                        OutputStream os = handler.handleDiffWindow(
+                                name == null ? path : name, window);
                         long length = window.getNewDataLength();
                         while (length > 0) {
-                            byte[] contents = (byte[]) myConnection.read("B", null)[0];
+                            byte[] contents = (byte[]) myConnection.read("B",
+                                    null)[0];
                             length -= contents.length;
                             try {
                                 if (os != null) {
@@ -303,42 +336,49 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                 }
                 handler.handleDiffWindowClosed(name == null ? path : name);
             }
-    	} finally {
+        } finally {
             closeConnection();
         }
     }
 
-    public int log(String[] targetPaths, long startRevision, long endRevision, boolean changedPaths, boolean strictNode, ISVNLogEntryHandler handler)
-            throws SVNException {
-        int count = 0;
+    public long log(String[] targetPaths, long startRevision, long endRevision,
+            boolean changedPaths, boolean strictNode, long limit,
+            ISVNLogEntryHandler handler) throws SVNException {
+        long count = 0;
         try {
             openConnection();
-            String[] realTargetPaths = new String[targetPaths.length];
-            // convert all paths to paths relative to repos root.
-            for (int i = 0; i < realTargetPaths.length; i++) {
-                realTargetPaths[i] = getRepositoryPath(targetPaths[i]);
-            }
-            Object[] buffer = new Object[] { "log", realTargetPaths, getRevisionObject(startRevision), getRevisionObject(endRevision),
-                    Boolean.valueOf(changedPaths), Boolean.valueOf(strictNode) };
-
-            write("(w((*s)(n)(n)ww))", buffer);
+            Object[] buffer = new Object[] { "log",
+                    getRepositoryPaths(targetPaths),
+                    getRevisionObject(startRevision),
+                    getRevisionObject(endRevision),
+                    Boolean.valueOf(changedPaths), Boolean.valueOf(strictNode),
+                    limit > 0 ? new Long(limit) : null };
+            write("(w((*s)(n)(n)wwn))", buffer);
             authenticate();
             while (true) {
                 try {
                     read("((", buffer);
                     Map changedPathsMap = null;
                     if (changedPaths) {
-                        changedPathsMap = handler != null ? new HashMap() : null;
+                        changedPathsMap = handler != null ? new HashMap()
+                                : null;
                         while (true) {
                             try {
                                 read("(SW(?S?N))", buffer);
                                 if (changedPathsMap != null) {
-                                    String path = SVNReader.getString(buffer, 0);
+                                    String path = SVNReader
+                                            .getString(buffer, 0);
                                     if (path != null && !"".equals(path.trim())) {
-                                        String type = SVNReader.getString(buffer, 1);
-                                        String copyPath = SVNReader.getString(buffer, 2);
-                                        long copyRev = SVNReader.getLong(buffer, 3);
-                                        changedPathsMap.put(path, new SVNLogEntryPath(path, type.charAt(0), copyPath, copyRev));
+                                        String type = SVNReader.getString(
+                                                buffer, 1);
+                                        String copyPath = SVNReader.getString(
+                                                buffer, 2);
+                                        long copyRev = SVNReader.getLong(
+                                                buffer, 3);
+                                        changedPathsMap.put(path,
+                                                new SVNLogEntryPath(path, type
+                                                        .charAt(0), copyPath,
+                                                        copyRev));
                                     }
                                 }
                             } catch (SVNException e) {
@@ -347,17 +387,24 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
                         }
                     }
                     read(")N(?S)(?S)(?S))", buffer);
+                    count++;
                     if (handler != null) {
                         long revision = SVNReader.getLong(buffer, 0);
                         String author = SVNReader.getString(buffer, 1);
                         Date date = SVNReader.getDate(buffer, 2);
                         String message = SVNReader.getString(buffer, 3);
                         // remove all
-                        handler.handleLogEntry(new SVNLogEntry(changedPathsMap, revision, author, date, message));
+                        if (!(limit > 0 && count > limit)) {
+                            handler.handleLogEntry(new SVNLogEntry(
+                                    changedPathsMap, revision, author, date,
+                                    message));
+                        }
                     }
-                    count++;
                 } catch (SVNException e) {
                     read("x", buffer);
+                    if (limit <= 0 || (limit > 0 && count <= limit)) {
+                        read("[()]", buffer);
+                    }
                     return count;
                 }
             }
@@ -366,9 +413,11 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public void update(long revision, String target, boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+    public void update(long revision, String target, boolean recursive,
+            ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
         target = target == null ? "" : target;
-        Object[] buffer = new Object[] { "update", getRevisionObject(revision), target, Boolean.valueOf(recursive) };
+        Object[] buffer = new Object[] { "update", getRevisionObject(revision),
+                target, Boolean.valueOf(recursive) };
         try {
             openConnection();
             write("(w((n)sw))", buffer);
@@ -381,13 +430,16 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public void update(String url, long revision, String target, boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+    public void update(String url, long revision, String target,
+            boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor)
+            throws SVNException {
         target = target == null ? "" : target;
         url = getCanonicalURL(url);
         if (url == null) {
             throw new SVNException(url + ": not valid URL");
         }
-        Object[] buffer = new Object[] { "switch", getRevisionObject(revision), target, Boolean.valueOf(recursive), url };
+        Object[] buffer = new Object[] { "switch", getRevisionObject(revision),
+                target, Boolean.valueOf(recursive), url };
         try {
             openConnection();
             write("(w((n)sws))", buffer);
@@ -400,14 +452,24 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public void diff(String url, long revision, String target, boolean ignoreAncestry, boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor)
-            throws SVNException {
+    public void diff(String url, long revision, String target,
+            boolean ignoreAncestry, boolean recursive,
+            ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+        diff(url, revision, revision, target, ignoreAncestry, recursive,
+                reporter, editor);
+    }
+
+    public void diff(String url, long tRevision, long revision, String target,
+            boolean ignoreAncestry, boolean recursive,
+            ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
         target = target == null ? "" : target;
         url = getCanonicalURL(url);
         if (url == null) {
             throw new SVNException(url + ": not valid URL");
         }
-        Object[] buffer = new Object[] { "diff", getRevisionObject(revision), target, Boolean.valueOf(ignoreAncestry), Boolean.valueOf(recursive), url };
+        Object[] buffer = new Object[] { "diff", getRevisionObject(tRevision),
+                target, Boolean.valueOf(recursive),
+                Boolean.valueOf(ignoreAncestry), url };
         try {
             openConnection();
             write("(w((n)swws))", buffer);
@@ -420,9 +482,11 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public void status(long revision, String target, boolean recursive, ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
+    public void status(long revision, String target, boolean recursive,
+            ISVNReporterBaton reporter, ISVNEditor editor) throws SVNException {
         target = target == null ? "" : target;
-        Object[] buffer = new Object[] { "status", target, Boolean.valueOf(recursive), getRevisionObject(revision) };
+        Object[] buffer = new Object[] { "status", target,
+                Boolean.valueOf(recursive), getRevisionObject(revision) };
         try {
             openConnection();
             write("(w(sw(n)))", buffer);
@@ -435,9 +499,11 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public void setRevisionPropertyValue(long revision, String propertyName, String propertyValue) throws SVNException {
+    public void setRevisionPropertyValue(long revision, String propertyName,
+            String propertyValue) throws SVNException {
         assertValidRevision(revision);
-        Object[] buffer = new Object[] { "change-rev-prop", getRevisionObject(revision), propertyName, propertyValue };
+        Object[] buffer = new Object[] { "change-rev-prop",
+                getRevisionObject(revision), propertyName, propertyValue };
         try {
             openConnection();
             write("(w(nss))", buffer);
@@ -448,33 +514,36 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public ISVNEditor getCommitEditor(String logMessage, Map locks, boolean keepLocks, final ISVNWorkspaceMediator mediator) throws SVNException {
+    public ISVNEditor getCommitEditor(String logMessage, Map locks,
+            boolean keepLocks, final ISVNWorkspaceMediator mediator)
+            throws SVNException {
         try {
             openConnection();
             if (locks != null) {
-                write("(w(s(*l)w))", new Object[] { "commit", logMessage, locks, Boolean.valueOf(keepLocks)});
+                write("(w(s(*l)w))", new Object[] { "commit", logMessage,
+                        locks, Boolean.valueOf(keepLocks) });
             } else {
                 write("(w(s))", new Object[] { "commit", logMessage });
             }
             authenticate();
             read("[()]", null);
-            SVNCommitEditor editor = new SVNCommitEditor(this, myConnection, mediator, new Runnable() {
-                public void run() {
-                    closeConnection();
-                }
-            });
-            return editor;
+            return new SVNCommitEditor(this, myConnection, mediator,
+                    new Runnable() {
+                        public void run() {
+                            closeConnection();
+                        }
+                    });
         } catch (SVNException e) {
             closeConnection();
             throw e;
         }
     }
-    
+
     public SVNLock getLock(String path) throws SVNException {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[] { "get-lock", path};
+            Object[] buffer = new Object[] { "get-lock", path };
             write("(w(s))", buffer);
             authenticate();
             read("[((?L))]", buffer);
@@ -488,23 +557,26 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[] { "get-locks", path};
+            Object[] buffer = new Object[] { "get-locks", path };
             write("(w(s))", buffer);
             authenticate();
             read("[((*L))]", buffer);
             Collection lockObjects = (Collection) buffer[0];
-            return lockObjects == null ? new SVNLock[0] : 
-                (SVNLock[]) lockObjects.toArray(new SVNLock[lockObjects.size()]);
+            return lockObjects == null ? new SVNLock[0]
+                    : (SVNLock[]) lockObjects.toArray(new SVNLock[lockObjects
+                            .size()]);
         } finally {
             closeConnection();
         }
     }
 
-    public SVNLock setLock(String path, String comment, boolean force, long revision) throws SVNException {
+    public SVNLock setLock(String path, String comment, boolean force,
+            long revision) throws SVNException {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[] { "lock", path, comment, Boolean.valueOf(force), getRevisionObject(revision)};
+            Object[] buffer = new Object[] { "lock", path, comment,
+                    Boolean.valueOf(force), getRevisionObject(revision) };
             write("(w(s(s)w(n)))", buffer);
             authenticate();
             read("[(L)]", buffer);
@@ -514,62 +586,8 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
     }
 
-    public SVNLock[] setLocks(String[] paths, String comment, boolean force, long[] revisions) throws SVNException {
-        SVNLock[] createdLocks = new SVNLock[paths.length];
-        try {
-            openConnection();
-
-            Object[] request = new Object[] { "lock", null, comment, Boolean.valueOf(force), null};
-            Object[] result = new Object[1];
-            for (int i = 0; i < paths.length; i++) {
-                String path = paths[i];
-                path = getRepositoryPath(path);
-                request[1] = path;
-                request[4] = getRevisionObject(revisions[i]);
-                write("(w(s(s)w(n)))", request);
-                authenticate();
-                result[0] = null;
-                result = read("[(L)]", result);
-                createdLocks[i] = (SVNLock) result[0];
-            }
-        } finally {
-            closeConnection();
-        }
-        return createdLocks;
-    }
-
-    public void removeLocks(String[] paths, String[] ids, boolean force) throws SVNException {
-        try {
-            openConnection();
-            for (int i = 0; i < paths.length; i++) {
-                String path = paths[i];
-                path = getRepositoryPath(path);
-                if (ids[i] == null) {
-                    Object[] buffer = new Object[] { "get-lock", path};
-                    write("(w(s))", buffer);
-                    authenticate();
-                    read("[((?L))]", buffer);
-                    if (buffer[0] == null) {
-                        // no lock there
-                        if (!force) {
-                            throw new SVNException("'" + path + "' is not locked in repository");
-                        }
-                        continue;
-                    }
-                    SVNLock lock = (SVNLock) buffer[0];
-                    ids[i] = lock.getID();
-                }
-                Object[] buffer = new Object[] {"unlock", path, ids[i], Boolean.valueOf(force)};
-                write("(w(s(s)w))", buffer);
-                authenticate();
-                read("[()]", buffer);
-            }
-        } finally {
-            closeConnection();
-        }
-    }
-
-    public void removeLock(String path, String id, boolean force) throws SVNException {
+    public void removeLock(String path, String id, boolean force)
+            throws SVNException {
         try {
             if (id == null) {
                 SVNLock lock = getLock(path);
@@ -580,7 +598,8 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
             }
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[] {"unlock", path, id, Boolean.valueOf(force)};
+            Object[] buffer = new Object[] { "unlock", path, id,
+                    Boolean.valueOf(force) };
             write("(w(s(s)w))", buffer);
             authenticate();
             read("[()]", buffer);
@@ -593,7 +612,8 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         try {
             openConnection();
             path = getRepositoryPath(path);
-            Object[] buffer = new Object[] {"stat", path, getRevisionObject(revision)};
+            Object[] buffer = new Object[] { "stat", path,
+                    getRevisionObject(revision) };
             write("(w(s(n)))", buffer);
             authenticate();
             read("[((?F))]", buffer);
@@ -615,8 +635,10 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         uuid = uuid == null ? getRepositoryUUID() : uuid;
         // remove url path from root.
         if (root != null) {
-        	myFullRoot = root;
-            root = root.startsWith("svn://") ? root.substring("svn://".length()) : root.substring("svn+ssh://".length());
+            myFullRoot = root;
+            root = root.startsWith("svn://") ? root
+                    .substring("svn://".length()) : root.substring("svn+ssh://"
+                    .length());
             root = PathUtil.removeTrailingSlash(root);
             if (root.indexOf('/') >= 0) {
                 root = root.substring(root.indexOf('/'));
@@ -626,15 +648,25 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         }
         DebugLog.log("root: " + root);
         DebugLog.log("full root: " + myFullRoot);
-        setRepositoryCredentials(uuid, root);
+        setRepositoryCredentials(uuid, root, myFullRoot);
     }
 
     private void openConnection() throws SVNException {
         lock();
-        ISVNConnector connector = SVNRepositoryFactoryImpl.getConnectorFactory().createConnector(this);
-        myConnection = new SVNConnection(connector);
-        myConnection.open(this);
-        authenticate();
+        ISVNConnector connector = SVNRepositoryFactoryImpl
+                .getConnectorFactory().createConnector(this);
+        myConnection = new SVNConnection(connector, getLocation(),
+                getAuthenticationManager());
+        try {
+            myConnection.open(this);
+            authenticate();
+        } finally {
+            myRealm = myConnection.getRealm();
+        }
+    }
+
+    public String getRealm() {
+        return myRealm;
     }
 
     void authenticate() throws SVNException {
@@ -647,7 +679,9 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         if (myConnection != null) {
             try {
                 myConnection.close();
-            } catch (SVNException e) {} finally {
+            } catch (SVNException e) {
+                //
+            } finally {
                 myConnection = null;
             }
         }
@@ -672,12 +706,16 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
      * ISVNReporter methods
      */
 
-    public void setPath(String path, String lockToken, long revision, boolean startEmpty) throws SVNException {
+    public void setPath(String path, String lockToken, long revision,
+            boolean startEmpty) throws SVNException {
         assertValidRevision(revision);
         if (lockToken == null) {
-            write("(w(snw))", new Object[] { "set-path", path, getRevisionObject(revision), Boolean.valueOf(startEmpty) });
+            write("(w(snw))", new Object[] { "set-path", path,
+                    getRevisionObject(revision), Boolean.valueOf(startEmpty) });
         } else {
-            write("(w(snw(s)))", new Object[] { "set-path", path, getRevisionObject(revision), Boolean.valueOf(startEmpty), lockToken });
+            write("(w(snw(s)))", new Object[] { "set-path", path,
+                    getRevisionObject(revision), Boolean.valueOf(startEmpty),
+                    lockToken });
         }
     }
 
@@ -685,12 +723,18 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         write("(w(s))", new Object[] { "delete-path", path });
     }
 
-    public void linkPath(SVNRepositoryLocation repository, String path, String lockToken, long revison, boolean startEmtpy) throws SVNException {
+    public void linkPath(SVNRepositoryLocation repository, String path,
+            String lockToken, long revison, boolean startEmtpy)
+            throws SVNException {
         assertValidRevision(revison);
         if (lockToken == null) {
-            write("(w(ssnw))", new Object[] { "link-path", path, repository.toString(), getRevisionObject(revison), Boolean.valueOf(startEmtpy) });
+            write("(w(ssnw))", new Object[] { "link-path", path,
+                    repository.toString(), getRevisionObject(revison),
+                    Boolean.valueOf(startEmtpy) });
         } else {
-            write("(w(ssnw(s)))", new Object[] { "link-path", path, repository.toString(), getRevisionObject(revison), Boolean.valueOf(startEmtpy), lockToken });
+            write("(w(ssnw(s)))", new Object[] { "link-path", path,
+                    repository.toString(), getRevisionObject(revison),
+                    Boolean.valueOf(startEmtpy), lockToken });
         }
     }
 
@@ -702,12 +746,24 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         write("(w())", new Object[] { "abort-report" });
     }
 
+    public String[] getRepositoryPaths(String[] paths) {
+        if (paths == null || paths.length == 0) {
+            return paths;
+        }
+        String[] fullPaths = new String[paths.length];
+        for (int i = 0; i < paths.length; i++) {
+            fullPaths[i] = getRepositoryPath(paths[i]);
+        }
+        return fullPaths;
+    }
+
     public String getRepositoryPath(String path) {
         if (path != null && path.startsWith("/")) {
             // assuming it is full path.
             return path;
         }
-        String fullPath = PathUtil.append(PathUtil.decode(getLocation().getPath()), path);
+        String fullPath = PathUtil.append(PathUtil.decode(getLocation()
+                .getPath()), path);
         // substract root path
         if (fullPath.startsWith(getRepositoryRoot())) {
             fullPath = fullPath.substring(getRepositoryRoot().length());
@@ -715,7 +771,8 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
         if (!fullPath.startsWith("/")) {
             fullPath = "/" + fullPath;
         }
-        return PathUtil.removeTrailingSlash(PathUtil.isEmpty(fullPath) ? "/" : fullPath);
+        return PathUtil.removeTrailingSlash(PathUtil.isEmpty(fullPath) ? "/"
+                : fullPath);
     }
 
     public void setCredentials(ISVNCredentials credentials) {
@@ -725,8 +782,16 @@ public class SVNRepositoryImpl extends SVNRepository implements ISVNReporter {
     public ISVNCredentials getCredentials() {
         return myCredentials;
     }
-    
+
     public String getFullRoot() {
-    	return myFullRoot;
+        return myFullRoot;
+    }
+
+    public void setExternalUserName(String userName) {
+        myExternalUserName = userName;
+    }
+
+    public String getExternalUserName() {
+        return myExternalUserName;
     }
 }
